Changed itemize to enumerate and fixed lemmata

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -68,13 +68,17 @@ all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the prem
 \end{enumerate}
 \end{proposition}
 
+\begin{proof}
+\TODO{}
+\end{proof}
+
 \TODO{Macro for ``mapped from occurences of''.}
 
 \TODO{Carefully check ``atom'' v.\ ``atom occurence''.}
 
 %---------------------------------------
 \begin{definition}\label{definition:AssociatedFlow}
-Given a derivation $\Phi$, we say that the unique atomic flow $\phi$ defined in Proposition~\vref{proposition:FlowUnique} is the atomic flow \emph{associated with}\index{flow!associated with derivation} the derivation $\Phi$. Sometimes, when an atom occurrence $a$ in $\Phi$ is mapped to an edge $\epsilon$ in $\phi$, we decorate $a$ with the label $\epsilon$ or the label $\phi$.
+Given a derivation $\Phi$, we say that the atomic flow $\phi$ constructed in the proof of  Proposition~\vref{proposition:FlowUnique} is the atomic flow \emph{associated with}\index{flow!associated with derivation} the derivation $\Phi$. Sometimes, when an atom occurrence $a$ in $\Phi$ is mapped to an edge $\epsilon$ in $\phi$, we decorate $a$ with the label $\epsilon$ or the label $\phi$.
 \end{definition}
 %---------------
 
