--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -1,7 +1,5 @@
 \newcommand{\PB}{\mathsf{PB}}
 
-\TODO{Make sure we don't join $a$ with $\bar a$.}
-
 Given a derivation $\Phi$ and an atom $a$, the operator, $\PB$, defined in this section produces a derivation with the same premiss and conclusion as $\Phi$, which is weakly streamlined with respect to both $a$ and $\bar a$. This operator is a strict improvement over $\ISR$, since it does not require the input derivation to be in simple form, and it deals with the dual atoms in parallell. We will see later how a derivation containing $n$ atoms can be weakly streamlined by $n/2$ applications of $\PB$.
 
 The operator is defined in terms of the following flow reduction.
@@ -18,7 +16,7 @@ We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker
 \vcenter{\hbox{\includegraphics{Figures/redPBContractum}}}
 \quad,
 \]
-where the evidenced interaction and cut vertices belong to the same connected component.
+where we call the evidenced interaction (resp., cut) vertex in the redex $\nu'_\aid$ (resp., $\nu'_\aiu$) and the evidenced interaction (resp., cut) vertex in the contractum $\nu_\aid$ (resp., $\nu_\aiu$); and where there is a path from $\nu'_\aid$ to $\nu'_\aiu$.
 \end{definition}
 %---------------
 
@@ -137,23 +135,19 @@ We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$
 
 \Tom{Added explanation:}
 
-We now show the basic properties of $\to_\frpb$. Namely, that the reduction does not create any `new' interaction or cut vertices, that it does not create any `new' paths between interaction or cut vertices, and that it breaks all the paths between the evidenced interaction and cut vertices.
+We now show the basic properties of $\to_\frpb$. Namely, that the reduction does not create any `new' interaction or cut vertices, that it does not create any `new' paths between interaction or $\top$ and cut or $\bot$ vertices, and that it breaks all the paths between the evidenced interaction and cut vertices.
+
+\Tom{Changed from itemize to enumerate.}
 
 %-------------------------------------
 \begin{lemma}\label{lemma:PathBreaker}
-Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$; in the following we refer to Definition~\ref{definition:PathBreaker}:
-\begin{itemize}
-\item let $f_1$, $f_2$, $f_3$, $g_1$, $g_2$ and $g_3$ be the evidenced isomorphisms;
-\item let $\nu'_\aiu$ be the evidenced cut and let $\nu'_\aid$ be the evidenced interaction vertex in the redex; and
-\item let $\nu_\aiu$ be the evidenced cut and let $\nu_\aid$ be the evidenced interaction vertex in the contractum,
-\end{itemize}
-then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$, such that
-\begin{itemize}
+In the following we refer to the names given in Definition~\ref{definition:PathBreaker}. Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$, such that
+\begin{enumerate}
 \item for some $1\le i\le 3$, $\nu=f_i(\nu')$ or $\nu=g_i(\nu')$, or $\nu=\nu_\aid$ and $\nu'=\nu'_\aid$ (resp., $\nu=\nu_\aiu$ and $\nu'=\nu'_\aiu$);
 \item if there is a path from $\nu$ to $\bot$ (resp., $\top$) in $\psi$, then there is a path from $\nu'$ to $\bot$ (resp., $\top$) in $\phi$; and
 \item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$ in $\psi$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that, for some $1\le i\le 3$, $\hat\nu=f_i(\nu')$ or $\hat\nu=g_i(\nu')$, or $\hat\nu=\nu_\aiu$ and $\hat\nu'=\nu'_\aiu$ (resp., $\hat\nu=\nu_\aid$ and $\hat\nu'=\nu'_\aid$); and there is a path from $\nu'$ to $\hat\nu'$ in $\phi$.
 \item there is no path from $\nu_\aid$ to $\nu_\aiu$.
-\end{itemize}
+\end{enumerate}
 \end{lemma}
 
 \TODO{Check commens from Alessio}
@@ -161,16 +155,16 @@ then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an inte
 
 \begin{proof}
 We consider each case separately:
-\begin{itemize}
+\begin{enumerate}
   \item by definition;
   \item any path from $\nu$ to $\bot$ (resp., $\top$) in $\psi$ must contain an edge $\epsilon$, such that, for some lower (resp., upper) edge $\epsilon'$ of $\phi$ and some $1\le i\le 3$, $f_i(\epsilon')=\epsilon$ or $g_i(\epsilon')=\epsilon$. Hence, there is a path from $\nu'$ to $\bot$ (resp., $\top$) in $\phi$; and
   \item we have to consider two cases:
-  \begin{itemize}
+  \begin{enumerate}
     \item for some $1\le i\le 3$, $\nu=f_i(\nu')$ and $\hat\nu=f_i(\hat\nu')$, or $\nu=g_i(\nu')$ and $\hat\nu=g_i(\hat\nu')$, then there is a path from $\nu'$ to $\hat\nu'$ in $\phi$; or
     \item $\nu=g_1(\nu')$ and $\hat\nu=g_2(\hat\nu')$, or $\nu=f_2(\nu')$ and $\hat\nu=f_3(\hat\nu')$ (resp., $\nu=g_2(\nu')$ and $\hat\nu=g_1(\hat\nu')$, or $\nu=f_3(\nu')$ and $\hat\nu=f_2(\hat\nu')$), then there is a path from $\nu'$ to $\nu'_\aiu$ (resp., $\nu'_\aid$) in $\phi$.
-  \end{itemize}
+  \end{enumerate}
   \item in Definition~\ref{definition:PathBreaker} we have colored the edges that might occur in paths from $\nu_\aid$ in red and paths that might occur in path to $\nu_\aiu$ in green. Since the red and the green edges never coincide, there can be no paths from $\nu_\aid$ to $\nu_\aiu$
-\end{itemize}
+\end{enumerate}
 \end{proof}
 %----------
 
