--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -834,16 +834,18 @@ The result follows by Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval
 \end{proof}
 %----------
 
+\Tom{Changed from itemize to enumerate.}
+
 %------------------------------------------------------------
 \begin{proposition}\label{proposition:QuasipolynomialMultipleIsolatedSubflowRemover}
 Given atoms $a_1$, $\dots$, $a_n$ and a derivation $\Phi$ that is in simple form with respect to $a_1$, $\dots$, $a_n$,
 \begin{enumerate}
 \item $\QMISR_n(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $a_1$, $\dots$, $a_n$;
 \item for any atom $b$,
-\begin{itemize}
+\begin{enumerate}
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\QMISR_n(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $b$, and
 \item if $b$ is not the dual of any of $a_1$, $\dots$, $a_n$ and $\Phi$ is in simple form with respect to $b$, then $\QMISR_n(\Phi,a_1,\dots,a_n)$ is in simple form with respect to $b$; and
-\end{itemize}
+\end{enumerate}
 \item the size of\/ $\QMISR_n(\Phi,a_1,\dots,a_n)$ depends polynomially on the size of\/ $\Phi$, and quasipolynomially on $n$.
 \end{enumerate}
 \end{proposition}
