--- a/global_reductions/isolated_subflow.tex
+++ b/global_reductions/isolated_subflow.tex
@@ -14,8 +14,9 @@ We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated sub
 \vcenter{\hbox{\includegraphics{Figures/redISRRedex}}}
 \quad\to_\fris\quad
 \vcenter{\hbox{\includegraphics{Figures/redISRContractum}}}
-\quad.
+\quad,
 \]
+where we call the evidenced interaction (resp., cut) vertex $\nu_\aid$ (resp., $\nu_\aiu$).
 \end{definition}
 %---------------
 
@@ -117,34 +118,36 @@ We know that the size of $\Phi_\ttt$ and the size of $\Phi_\fff$ depend polynomi
 \end{proof}
 %----------
 
+\Tom{Added explanation:}
+
+We now show the basic properties of $\to_\fris$. Namely, that the reduction does not create any `new' interaction or cut vertices, and that it does not create any `new' paths between interaction or $\top$ and cut or $\bot$ vertices.
+
 \Tom{Exchanged $\top$ and $\bot$ in item 2, and clarified statement.}
+
+\Tom{Changed from itemize to enumerate to make it a bit clearer.}
 
 %-------------------------------------
 \begin{lemma}\label{lemma:IsolatedSubflowRemovalPaths}
-Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\fris\psi$; in the following we refer to Definition~\ref{definition:IsolatedSubflowRemoval}:
-\begin{itemize}
-\item let $f_1$ and $f_2$ be the evidenced isomorphisms; and
-\item let $\nu_\ai$ be the evidenced cut (resp., interaction) vertex,
-\end{itemize}
-then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$, such that
-\begin{itemize}
+In the following we refer to the names given in Definition~\ref{definition:IsolatedSubflowRemoval}. 
+Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\fris\psi$ then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$, such that
+\begin{enumerate}
 \item $\nu=f_1(\nu')$ or $\nu=f_2(\nu')$;
-\item if there is a path from $\nu$ to $\bot$ (resp., $\top$) in $\psi$, then there is a path from $\nu'$ to $\bot$ (resp., $\top$) in $\phi$; and
-\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$ in $\psi$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that $\hat\nu=f_1(\nu')$ or $\hat\nu=f_2(\nu')$, or $\hat\nu'=\nu_\ai$; and there is a path from $\nu'$ to $\hat\nu'$ in $\phi$.
-\end{itemize}
+\item if there is a path from $\nu$ to $\bot$ (resp., $\top$), then there is a path from $\nu'$ to $\bot$ (resp., $\top$); and
+\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that $\hat\nu=f_1(\nu')$ or $\hat\nu=f_2(\nu')$, or $\hat\nu'=\nu_\aiu$ (resp., $\hat\nu'=\nu_\aid$); and there is a path from $\nu'$ to $\hat\nu'$.
+\end{enumerate}
 \end{lemma}
 
 \begin{proof}
 We consider each case separately:
-\begin{itemize}
+\begin{enumerate}
  \item by definition;
- \item any path from $\nu$ to $\bot$ (resp., $\top$) in $\psi$ must contain an edge $\epsilon$, such that, for some lower (resp., upper) edge $\epsilon'$ of $\phi$, $f_1(\epsilon')=\epsilon$ or $f_2(\epsilon')=\epsilon$. Hence, there is a path from $\nu'$ to $\bot$ (resp., $\top$) in $\phi$; and
+ \item any path from $\nu$ to $\bot$ (resp., $\top$) must contain an edge $\epsilon$, such that, for some lower (resp., upper) edge $\epsilon'$ of $\phi$, $f_1(\epsilon')=\epsilon$ or $f_2(\epsilon')=\epsilon$. Hence, there is a path from $\nu'$ to $\bot$ (resp., $\top$); and
  \item we have to consider two cases:
  \begin{itemize}
-  \item $\nu=f_1(\nu')$ and $\hat\nu=f_1(\hat\nu')$, or $\nu=f_2(\nu')$ and $\hat\nu=f_2(\hat\nu')$, then there is a path from $\nu'$ to $\hat\nu'$ in $\phi$; or
-  \item $\nu=f_1(\nu')$ and $\hat\nu=f_2(\hat\nu')$ (resp., $\nu=f_2(\nu')$ and $\hat\nu=f_1(\hat\nu')$),then there is a path from $\nu'$ to $\nu_\ai$ in $\phi$.
+  \item $\nu=f_1(\nu')$ and $\hat\nu=f_1(\hat\nu')$, or $\nu=f_2(\nu')$ and $\hat\nu=f_2(\hat\nu')$, then there is a path from $\nu'$ to $\hat\nu'$; or
+  \item $\nu=f_1(\nu')$ and $\hat\nu=f_2(\hat\nu')$ (resp., $\nu=f_2(\nu')$ and $\hat\nu=f_1(\hat\nu')$),then there is a path from $\nu'$ to $\nu_\aiu$ (resp., $\nu_\aid$).
  \end{itemize}
-\end{itemize}
+\end{enumerate}
 \end{proof}
 %----------
 
@@ -270,16 +273,18 @@ We then define $\ISR(\Phi,a)$ to be such that $\Psi\to_\fris\ISR(\Phi,a)$, where
 \end{definition}
 %---------------
 
+\Tom{Changed itemize to enumerate.}
+
 %------------------------------------------------------------
 \begin{proposition}\label{proposition:IsolatedSubflowRemover}
 Given an atom $a$ and a derivation $\Phi$ that is in simple form with respect to $a$,
 \begin{enumerate}
 \item $\ISR(\Phi,a)$ is weakly streamlined with respect to $a$;
 \item for any atom $b$,
-\begin{itemize}
+\begin{enumerate}
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\ISR(\Phi,a)$ is weakly streamlined with respect to $b$, and
 \item if $b$ is not the dual of $a$ and $\Phi$ is in simple form with respect to $b$, then $\ISR(\Phi,a)$ is in simple form with respect to $b$; and
-\end{itemize}
+\end{enumerate}
 \item the size of\/ $\ISR(\Phi,a)$ depends polynomially on the size of\/ $\Phi$.
 \end{enumerate}
 \end{proposition}
@@ -291,10 +296,10 @@ If $\Phi$ is weakly streamlined with respect to $a$, the result is trivial. Assu
 \begin{enumerate}
 \item by definition there is no path in $\phi$ from an interaction to a cut vertex whose edges are mapped to from instances of $a$. By Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, we know that if there is a path from an interaction to a cut vertex in the atomic flow of $\ISR(\Phi,a)$ whose edges are mapped to from instances of $a$, then there must be a path from an interaction to a cut vertex in $\phi$ whose edges are mapped to from instances $a$. Hence, the statement follows by contradiction;
 \item
-\begin{itemize}
+\begin{enumerate}
  \item if there is a path from an interaction (resp., cut) vertex in the atomic flow of $\ISR(\Phi,a)$ whose edges are mapped to from instances of $b$, then, by \newline Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, there is a path from an interaction (resp., cut) vertex in $\phi$, so also in $\phi'$, whose edges are mapped to from instances of $b$. Hence, the statement follows by contradiction; and
  \item if there is an interaction (resp., cut) vertex $\nu$ and a cut (resp., interaction) vertex $\hat\nu$ in the atomic flow of $\ISR(\Phi,a)$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from instances of $b$, then, by Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, there is an interaction (resp., cut) vertex $\nu'$ and a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from instances of $b$. Furthermore, since we can assume that $b$ is not $a$ or $\bar a$, $\phi$ restricted to $b$ equals $\phi'$ restricted to $b$. Hence, the statement follows by contradiction.
-\end{itemize}
+\end{enumerate}
 \item the statement follows by Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}.
 \end{enumerate}
 \end{proof}
