--- a/main_result.tex
+++ b/main_result.tex
@@ -4,34 +4,30 @@ We now present the main result of this thesis: Three procedures for obtaining we
 
 %----------------------------------------------
 \begin{theorem}\label{theorem:WeakStreamlining}
-Given a derivation $\Phi$ and unique and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$,
-\begin{itemize}
+Given a derivation $\Phi$ and distinct and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$,
+\begin{enumerate}
 \item let
-\begin{itemize}
-\item $\Phi'=\ISR(\dots\ISR(\Simpl(\Phi,a_1,\dots,a_n),a_1),\dots,a_n)$, and
-\item $\Phi''=\ISR(\dots\ISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1),\dots,\bar a_n)$,
-\end{itemize}
+\[\Phi'=\ISR(\dots\ISR(\Simpl(\Phi,a_1,\dots,a_n),a_1),\dots,a_n)\quad\mbox{and}\]
+\[\Phi''=\ISR(\dots\ISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1),\dots,\bar a_n)\;,\]
 then
-\begin{itemize}
+\begin{enumerate}
 \item $\Phi''$ is weakly streamlined, and
 \item the size of $\Phi''$ depends at most exponentially on the size of\/ $\Phi$;
-\end{itemize}
+\end{enumerate}
 \item let\/ $\Phi'=\PB(\dots\PB(\Phi,a_1),\dots,a_n)$, then
-\begin{itemize}
+\begin{enumerate}
 \item $\Phi'$ is weakly streamlined, and
 \item the size of\/ $\Phi'$ depends at most exponentially on the size of\/ $\Phi$; and
-\end{itemize}
+\end{enumerate}
 \item let
-\begin{itemize}
-\item $\Phi'=\QMISR(\Simpl(\Phi,a_1,\dots,a_n),a_1,\dots,a_n)$, and
-\item $\Phi''=\QMISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1,\dots,\bar a_n)$,
-\end{itemize}
+\[\Phi'=\QMISR(\Simpl(\Phi,a_1,\dots,a_n),a_1,\dots,a_n)\quad\mbox{and}\]
+\[\Phi''=\QMISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1,\dots,\bar a_n)\;,\]
 then
-\begin{itemize}
+\begin{enumerate}
 \item $\Phi''$ is weakly streamlined, and
 \item the size of\/ $\Phi''$ depends at most quasipolynomially on the size of\/ $\Phi$.
-\end{itemize}
-\end{itemize}
+\end{enumerate}
+\end{enumerate}
 \end{theorem}
 
 \begin{proof}
