--- a/Figures/redPBRedex.tex
+++ b/Figures/redPBRedex.tex
@@ -13,7 +13,7 @@
 \atomicflow
 {
 (-8, 7)*{\afvjdm{6}{\boldsymbol\epsilon}{}};
-( 0, 8)*{\afaidcol{}{}{}{}{}{}{Red}{Red}};
+( 0, 8)*{\afaid{}{}{}{}{}{}};
 ( 8, 7)*{\afvjdm{6}{}{\boldsymbol{\epsilon'}}};
 (-5, 0)*{\affr{8}{8}};
 (-4, 2)*{\aflabelright\phi};
@@ -21,7 +21,7 @@
 ( 5, 0)*{\affr{8}{8}};
 ( 6, 2)*{\aflabelright{\psi}};
 ( 8,-7)*{\afvjum{6}{}{\boldsymbol{\iota'}}};
-( 0,-8)*{\afaiucol{}{}{}{}{}{}{OliveGreen}{OliveGreen}};
+( 0,-8)*{\afaiu{}{}{}{}{}{}};
 (-8,-7)*{\afvjum{6}{\boldsymbol\iota}{}};
 }
 \]
