Fixed remark in line with def of PB

--- a/global_reductions/isolated_subflow.tex
+++ b/global_reductions/isolated_subflow.tex
@@ -20,9 +20,11 @@ where we call the evidenced interaction (resp., cut) vertex $\nu_\aid$ (resp., $
 \end{definition}
 %---------------
 
+\Tom{Corrected remark (cf. change to Definition~\vref{definition:PathBreaker}).}
+
 %-------------------------------------------------------------
 \begin{remark}\label{remark:IsolatedSubflowRemovalRestriction}
-The condition on the atomic flow $\psi$ in Definition~\ref{definition:IsolatedSubflowRemoval} ensures that all the edges in $\psi$ are mapped to from occurrences of the same atom. However, the reduction would still be sound if, at the expense of a slightly more verbose soundness proof, we relaxed the condition to say that the upper and lower edge of $\psi$ belong to the same connected component.
+The condition on the atomic flow $\psi$ in Definition~\ref{definition:IsolatedSubflowRemoval} ensures that all the edges in $\psi$ are mapped to from occurrences of the same atom. However, the reduction would still be sound if, at the expense of a slightly more verbose soundness proof, we relaxed the condition to say that there is a path from $\nu_\aid$ to $\nu_\aiu$.
 \end{remark}
 
 %---------------------------------------------------------
