--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -370,7 +370,7 @@ We can then distinguish between the three occurrences of $\bar a$ that are mappe
       \vlx.\vlx\bar a]
 \quad;
 \]
-we can also substitute for these occurrences, for example by $\{\bar a^\one/\fff\}$; such a situation occurs in the proof of Theorem~\ref{ThSimpleForm}. Note that simply substituting $\fff$ for $\bar a^\one$ would invalidate this derivation because it would break the cut and weakening instances; however, the proof of Theorem~\ref{ThSimpleForm} specifies how to fix such broken instances.
+we can also substitute for these occurrences, for example by $\{\bar a^\one/\fff\}$; such a situation occurs in the proof of Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}. Note that simply substituting $\fff$ for $\bar a^\one$ would invalidate this derivation because it would break the cut and weakening instances; however, the proof of Theorem~\ref{theorem:SoundIsolatedSubflowRemoval} specifies how to fix the broken cut instance and Proposition~\vref{proposition:DerivationSubstitution} specifies how to fix the broken weakening.
 
 We generalise this labelling mechanism to boxes. For example, we can use a different representation of the flow of $\Phi$ to individuate two classes $a^\phi$ and $\bar a^\phi$ of atom occurences, as follows:
 \[
